fix(dropdown): fix spacing for label items

--- a/projects/igniteui-angular/drop-down/src/drop-down/themes/_base.scss
+++ b/projects/igniteui-angular/drop-down/src/drop-down/themes/_base.scss
@@ -165,6 +165,7 @@ $_theme: $material;
             pointer-events: auto;
 
             label {
+                @extend %item;
                 @extend %header;
             }
         }
