--- a/projects/igniteui-angular/drop-down/src/drop-down/themes/shared/_fluent.scss
+++ b/projects/igniteui-angular/drop-down/src/drop-down/themes/shared/_fluent.scss
@@ -14,4 +14,13 @@ $_theme: $fluent;
     @include e(header) {
         @include type-style(subtitle-2);
     }
+
+    @include e(group) {
+        pointer-events: auto;
+
+        label {
+            @include type-style(subtitle-2);
+        }
+    }
 }
+
