--- a/projects/igniteui-angular/drop-down/src/drop-down/themes/shared/_indigo.scss
+++ b/projects/igniteui-angular/drop-down/src/drop-down/themes/shared/_indigo.scss
@@ -41,4 +41,12 @@ $_theme: $indigo;
         margin-block-end: rem(2px);
         padding-block: pad-inline(rem(4px), rem(6px), rem(8px));
     }
+
+   @include e(group) {
+        label {
+            padding-inline: pad-inline(rem(8px), rem(12px), rem(12px));
+            padding-block: pad-block(rem(4px), rem(6px), rem(8px));
+            margin-block-end: 0.125rem;
+        }
+    }
 }
